// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartFacet /> should edit 1`] = `
<ChartForm
  chart={
    Object {
      "attribute": "system.type",
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={true}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartFacet /> should render properly 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-3:hover button svg {
  opacity: 1;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  padding: 6px;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg,
.emotion-5 .noop svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #808080;
}

.emotion-5 svg {
  opacity: 0;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-6 {
  width: 2px;
}

.emotion-8 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  height: 100%;
}

.emotion-9 .Loading {
  min-height: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 8px;
  padding-right: 28px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-12 {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow-y: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #ffffff;
}

.emotion-13:hover,
.emotion-13.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-13:hover svg,
.emotion-13.focus-visible:focus svg {
  color: #ffffff;
}

.emotion-14 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  width: 100%;
  background-color: #0074f5;
}

.emotion-18 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-20 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-21 {
  padding-left: 8px;
}

.emotion-22 {
  margin-top: 4px;
  padding: 4px;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-27 {
  width: 67%;
  background-color: #a03dc7;
}

.emotion-28 {
  height: 4px;
  width: 33%;
  border-top: 1px solid #3b3b3b;
}

.emotion-37 {
  width: 34%;
  background-color: #d6680b;
}

.emotion-38 {
  height: 4px;
  width: 66%;
  border-top: 1px solid #3b3b3b;
}

.emotion-47 {
  width: 34%;
  background-color: #ebb52e;
}

.emotion-57 {
  width: 34%;
  background-color: #00bdc1;
}

.emotion-67 {
  width: 34%;
  background-color: #c54a4a;
}

.emotion-77 {
  width: 0%;
  background-color: #ff7867;
}

.emotion-78 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

.emotion-83 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-84 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-84:hover,
.emotion-84.focus-visible:focus,
.emotion-84 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-85 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-86 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h3
          className="emotion-4"
        >
          location.city
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-6"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            <div>
              LABEL
            </div>
            <div>
              COUNT
            </div>
          </div>
          <ul
            className="emotion-12"
          >
            <li>
              <button
                aria-label="Tyngsboro"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      className="emotion-16"
                    >
                      <div
                        className="emotion-17"
                      />
                      <div
                        className="emotion-18"
                      />
                    </div>
                    <div
                      className="emotion-19"
                    >
                      <div
                        className="emotion-20"
                      >
                        Tyngsboro
                      </div>
                      <div
                        className="emotion-21"
                      >
                        3
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                aria-label="Brooklyn"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      className="emotion-16"
                    >
                      <div
                        className="emotion-27"
                      />
                      <div
                        className="emotion-28"
                      />
                    </div>
                    <div
                      className="emotion-19"
                    >
                      <div
                        className="emotion-20"
                      >
                        Brooklyn
                      </div>
                      <div
                        className="emotion-21"
                      >
                        2
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                aria-label="Cát Bà"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      className="emotion-16"
                    >
                      <div
                        className="emotion-37"
                      />
                      <div
                        className="emotion-38"
                      />
                    </div>
                    <div
                      className="emotion-19"
                    >
                      <div
                        className="emotion-20"
                      >
                        Cát Bà
                      </div>
                      <div
                        className="emotion-21"
                      >
                        1
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                aria-label="La Habana Vieja"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      className="emotion-16"
                    >
                      <div
                        className="emotion-47"
                      />
                      <div
                        className="emotion-38"
                      />
                    </div>
                    <div
                      className="emotion-19"
                    >
                      <div
                        className="emotion-20"
                      >
                        La Habana Vieja
                      </div>
                      <div
                        className="emotion-21"
                      >
                        1
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                aria-label="North Glendale"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      className="emotion-16"
                    >
                      <div
                        className="emotion-57"
                      />
                      <div
                        className="emotion-38"
                      />
                    </div>
                    <div
                      className="emotion-19"
                    >
                      <div
                        className="emotion-20"
                      >
                        North Glendale
                      </div>
                      <div
                        className="emotion-21"
                      >
                        1
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                aria-label="Saalfelden am Steinernen Meer"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      className="emotion-16"
                    >
                      <div
                        className="emotion-67"
                      />
                      <div
                        className="emotion-38"
                      />
                    </div>
                    <div
                      className="emotion-19"
                    >
                      <div
                        className="emotion-20"
                      >
                        Saalfelden am Steinernen Meer
                      </div>
                      <div
                        className="emotion-21"
                      >
                        1
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                aria-label="Zermatt"
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      className="emotion-16"
                    >
                      <div
                        className="emotion-77"
                      />
                      <div
                        className="emotion-78"
                      />
                    </div>
                    <div
                      className="emotion-19"
                    >
                      <div
                        className="emotion-20"
                      >
                        Zermatt
                      </div>
                      <div
                        className="emotion-21"
                      >
                        0
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                  >
                    <svg
                      data-file-name="filter.svg"
                      height={20}
                    />
                  </div>
                </div>
              </button>
            </li>
          </ul>
          <div
            className="emotion-83"
          >
            <button
              aria-label="Add Filter"
              className="emotion-84"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-85"
              >
                <div
                  className="emotion-86"
                >
                  <svg
                    data-file-name="filter.svg"
                    height={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartFacet /> should render properly without data 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-3:hover button svg {
  opacity: 1;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  padding: 6px;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg,
.emotion-5 .noop svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #808080;
}

.emotion-5 svg {
  opacity: 0;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-6 {
  width: 2px;
}

.emotion-8 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  height: 100%;
}

.emotion-9 .Loading {
  min-height: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 8px;
  padding-right: 28px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-12 {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow-y: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-14:hover,
.emotion-14.focus-visible:focus,
.emotion-14 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h3
          className="emotion-4"
        >
          location.city
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-6"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            <div>
              LABEL
            </div>
            <div>
              COUNT
            </div>
          </div>
          <ul
            className="emotion-12"
          />
          <div
            className="emotion-13"
          >
            <button
              aria-label="Add Filter"
              className="emotion-14"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-15"
              >
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="filter.svg"
                    height={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartFacet /> should render without an attribute 1`] = `
<ChartForm
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={false}
  setIsEditing={[Function]}
/>
`;
